// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Basic 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--primary   "
  style={null}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Components/Modal Basic 1`] = `
<div>
  <button
    className="storybook-button storybook-button--medium storybook-button--upgrade   "
    onClick={[Function]}
    style={null}
    type="button"
  >
    Open Modal
  </button>
</div>
`;

exports[`Storyshots Components/Slider Basic 1`] = `
<div
  aria-disabled={false}
  className="input-range"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
>
  <span
    className="input-range__label input-range__label--min"
  >
    <span
      className="input-range__label-container"
    >
      0 
    </span>
  </span>
  <div
    className="input-range__track input-range__track--background"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="input-range__track input-range__track--active"
      style={
        Object {
          "left": "0%",
          "width": "0%",
        }
      }
    />
    <span
      className="input-range__slider-container"
      style={
        Object {
          "left": "0%",
          "position": "absolute",
        }
      }
    >
      <span
        className="input-range__label input-range__label--value"
      >
        <span
          className="input-range__label-container"
        >
          0 
        </span>
      </span>
      <div
        aria-valuemax={10}
        aria-valuemin={0}
        aria-valuenow={0}
        className="input-range__slider"
        draggable="false"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        tabIndex="0"
      />
    </span>
  </div>
  <span
    className="input-range__label input-range__label--max"
  >
    <span
      className="input-range__label-container"
    >
      10 
    </span>
  </span>
</div>
`;

exports[`Storyshots Components/Toggle Basic 1`] = `
<label
  class="switch"
>
  <input
    checked={false}
    type="checkbox"
  />
  <span
    class="slider round"
  />
</label>
`;

exports[`Storyshots Components/Tooltip Basic 1`] = `
<div
  className="tooltips top-align"
>
  Tooltip text
  <span
    className="tooltiptext top-position"
  >
    Hover over me
  </span>
</div>
`;
